--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/blog.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="A blogging app" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/blog.jpg" />
     <link rel="stylesheet" href="Blog.css" />
     <link
       rel="stylesheet"
@@ -29,10 +26,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>The-Blog</title>
   </head>
-  <body style="background-color: black">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <body style="background-color: #1f1f1f">
     <div id="root"></div>
     <!--
       This HTML file is a template.
